# shopcube

./: README.md  pyproject.toml  setup.py
reqs/: app.in  app.txt  dev.txt
src/shopcube/: init.py
src/shopcube/modules/box__ecommerce/pos/: models.py
src/shopcube/modules/box__ecommerce/product/: models.py  view.py
src/shopcube/static/themes/front/ecommerceus/: index.html
